<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FF4141">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_menu_title"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <!-- Menu Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <!-- Chicago Style Image Button -->
            <ImageButton
                android:id="@+id/chicagoStyleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:scaleType="centerCrop"
                android:src="@drawable/chicago_style" />

            <!-- Black Transparent Overlay -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#883C3C3C" />

            <!-- White Text on Top -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/main_menu_chicago_pizza"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp">

            <!-- NY Style Image Button -->
            <ImageButton
                android:id="@+id/nyStyleButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:scaleType="centerCrop"
                android:src="@drawable/ny_style" />

            <!-- Black Transparent Overlay -->
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#883C3C3C" /> <!-- Black with 50% transparency -->

            <!-- White Text on Top -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/main_menu_ny_pizza"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="2"
        android:useDefaultMargins="true">

        <!-- Orders Placed Button -->

        <!-- Current Order Button -->
    </GridLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <ImageButton
            android:id="@+id/ordersPlacedButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:scaleType="fitCenter"
            android:src="@drawable/orders_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/currentOrderButton"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background"
            android:scaleType="fitCenter"
            android:src="@drawable/current_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>